src/objects/kadaimng__c.object
<CustomObject>
    <fields>
        <fullName>completedate__c</fullName>
        <label>完了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>content__c</fullName>
        <label>内容</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>deadline__c</fullName>
        <label>期限</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>importance__c</fullName>
        <label>重要度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>高</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>低</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kbn__c</fullName>
        <label>区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>課題</fullName>
                </value>
                <value>
                    <fullName>要望</fullName>
                </value>
                <value>
                    <fullName>仕様変更</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pjname__c</fullName>
        <label>関連プロジェクト</label>
        <referenceTo>pjmng__c</referenceTo>
        <relationshipLabel>課題管理</relationshipLabel>
        <relationshipName>kadaiDxmB</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>priority__c</fullName>
        <label>優先度</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>高</fullName>
                </value>
                <value>
                    <fullName>中</fullName>
                </value>
                <value>
                    <fullName>低</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>result__c</fullName>
        <label>方針／結果</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>start_date__c</fullName>
        <label>発生日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <label>ステータス</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>未対応</fullName>
                </value>
                <value>
                    <fullName>対応中</fullName>
                </value>
                <value>
                    <fullName>完了</fullName>
                </value>
                <value>
                    <fullName>保留</fullName>
                </value>
                <value>
                    <fullName>対応なし</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>tanto__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>usermng__c.valid__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>usermng__c</referenceTo>
        <relationshipLabel>課題管理</relationshipLabel>
        <relationshipName>kadai7QwP</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>課題管理</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>課題名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>